Utility AI Implementation
Incorporated a utility AI system. Each behaviour can now evaluate a number given its environment/condition and act on the highest-evaluated behaviour. Can somewhat randomise evaluation via a roulette to not always pick the best option (still more commonly chooses the best option, however). Uses timing defined per behaviour to avoid constant/erratic behaviour switching--especially when given the roulette.

--- a/AIDecisions/AIEYear1Samples-master/RaylibStarterCPP/RaylibStarterCPP.vcxproj
+++ b/AIDecisions/AIEYear1Samples-master/RaylibStarterCPP/RaylibStarterCPP.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Pathfinding.cpp" />
     <ClCompile Include="State.cpp" />
+    <ClCompile Include="UtilityAI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Behaviour.h" />
@@ -184,6 +185,7 @@
     <ClInclude Include="Helper.h" />
     <ClInclude Include="Pathfinding.h" />
     <ClInclude Include="State.h" />
+    <ClInclude Include="UtilityAI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
