--- a/AIDecisions/AIEYear1Samples-master/RaylibStarterCPP/RaylibStarterCPP.vcxproj.filters
+++ b/AIDecisions/AIEYear1Samples-master/RaylibStarterCPP/RaylibStarterCPP.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Condition.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UtilityAI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Pathfinding.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Condition.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UtilityAI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
